--- a/mmapp/package.json
+++ b/mmapp/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "handlebars": "^4.1.2",
+    "lodash": "^4.17.14",
+    "lodash.template": "^4.5.0",
+    "mem": "^5.1.1",
     "merge": "^1.2.1",
     "npm": "^6.9.0",
     "react": "^16.5.1",
